// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPartyAuthComponent snapshots renders buttons correctly without deeplinking: apple button snapshot 1`] = `
<button
  class="w-full px-2 mt-2 justify-center text-black bg-transparent border-grey-300 border hover:border-black rounded-lg text-md text-center inline-flex items-center focus-visible-default outline-offset-2"
  type="submit"
>
  <svg>
    apple-logo.svg
  </svg>
  <span
    data-testid="ftlmsg-mock"
    id="continue-with-apple-button"
  >
    <p
      class="pe-4"
    >
      Continue with Apple
    </p>
  </span>
</button>
`;

exports[`ThirdPartyAuthComponent snapshots renders buttons correctly without deeplinking: google button snapshot 1`] = `
<button
  class="w-full px-2 mt-2 justify-center text-black bg-transparent border-grey-300 border hover:border-black rounded-lg text-md text-center inline-flex items-center focus-visible-default outline-offset-2"
  type="submit"
>
  <svg>
    google-logo.svg
  </svg>
  <span
    data-testid="ftlmsg-mock"
    id="continue-with-google-button"
  >
    <p
      class="pe-4"
    >
      Continue with Google
    </p>
  </span>
</button>
`;

exports[`ThirdPartyAuthComponent snapshots renders correctly with default props 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="text-sm flex items-center justify-center my-6"
    >
      <div
        class="flex-1 h-px bg-grey-300 divide-x"
      />
      <span
        data-testid="ftlmsg-mock"
        id="third-party-auth-options-or"
      >
        <div
          class="mx-4 text-base text-grey-300 font-extralight"
        >
          or
        </div>
      </span>
      <div
        class="flex-1 h-px bg-grey-300 divide-x"
      />
    </div>
    <div
      class="flex flex-col"
    >
      <form
        action=""
        method="GET"
      >
        <input
          data-testid="google-signin-form-state"
          name="state"
          type="hidden"
          value="http%3A%2F%2Flocalhost%2F%3F"
        />
        <input
          name="client_id"
          type="hidden"
          value=""
        />
        <input
          name="scope"
          type="hidden"
          value="openid email profile"
        />
        <input
          name="redirect_uri"
          type="hidden"
          value=""
        />
        <input
          name="access_type"
          type="hidden"
          value="offline"
        />
        <input
          name="prompt"
          type="hidden"
          value="consent"
        />
        <input
          name="response_type"
          type="hidden"
          value="code"
        />
        <button
          class="w-full px-2 mt-2 justify-center text-black bg-transparent border-grey-300 border hover:border-black rounded-lg text-md text-center inline-flex items-center focus-visible-default outline-offset-2"
          type="submit"
        >
          <svg>
            google-logo.svg
          </svg>
          <span
            data-testid="ftlmsg-mock"
            id="continue-with-google-button"
          >
            <p
              class="pe-4"
            >
              Continue with Google
            </p>
          </span>
        </button>
      </form>
      <form
        action=""
        method="GET"
      >
        <input
          data-testid="apple-signin-form-state"
          name="state"
          type="hidden"
          value="http%3A%2F%2Flocalhost%2F%3F"
        />
        <input
          name="client_id"
          type="hidden"
          value=""
        />
        <input
          name="scope"
          type="hidden"
          value="email"
        />
        <input
          name="redirect_uri"
          type="hidden"
          value=""
        />
        <input
          name="access_type"
          type="hidden"
          value="offline"
        />
        <input
          name="prompt"
          type="hidden"
          value="consent"
        />
        <input
          name="response_type"
          type="hidden"
          value="code id_token"
        />
        <input
          name="response_mode"
          type="hidden"
          value="form_post"
        />
        <button
          class="w-full px-2 mt-2 justify-center text-black bg-transparent border-grey-300 border hover:border-black rounded-lg text-md text-center inline-flex items-center focus-visible-default outline-offset-2"
          type="submit"
        >
          <svg>
            apple-logo.svg
          </svg>
          <span
            data-testid="ftlmsg-mock"
            id="continue-with-apple-button"
          >
            <p
              class="pe-4"
            >
              Continue with Apple
            </p>
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`ThirdPartyAuthComponent snapshots renders correctly without separator 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex flex-col"
    >
      <form
        action=""
        method="GET"
      >
        <input
          data-testid="google-signin-form-state"
          name="state"
          type="hidden"
          value="http%3A%2F%2Flocalhost%2F%3F"
        />
        <input
          name="client_id"
          type="hidden"
          value=""
        />
        <input
          name="scope"
          type="hidden"
          value="openid email profile"
        />
        <input
          name="redirect_uri"
          type="hidden"
          value=""
        />
        <input
          name="access_type"
          type="hidden"
          value="offline"
        />
        <input
          name="prompt"
          type="hidden"
          value="consent"
        />
        <input
          name="response_type"
          type="hidden"
          value="code"
        />
        <button
          class="w-full px-2 mt-2 justify-center text-black bg-transparent border-grey-300 border hover:border-black rounded-lg text-md text-center inline-flex items-center focus-visible-default outline-offset-2"
          type="submit"
        >
          <svg>
            google-logo.svg
          </svg>
          <span
            data-testid="ftlmsg-mock"
            id="continue-with-google-button"
          >
            <p
              class="pe-4"
            >
              Continue with Google
            </p>
          </span>
        </button>
      </form>
      <form
        action=""
        method="GET"
      >
        <input
          data-testid="apple-signin-form-state"
          name="state"
          type="hidden"
          value="http%3A%2F%2Flocalhost%2F%3F"
        />
        <input
          name="client_id"
          type="hidden"
          value=""
        />
        <input
          name="scope"
          type="hidden"
          value="email"
        />
        <input
          name="redirect_uri"
          type="hidden"
          value=""
        />
        <input
          name="access_type"
          type="hidden"
          value="offline"
        />
        <input
          name="prompt"
          type="hidden"
          value="consent"
        />
        <input
          name="response_type"
          type="hidden"
          value="code id_token"
        />
        <input
          name="response_mode"
          type="hidden"
          value="form_post"
        />
        <button
          class="w-full px-2 mt-2 justify-center text-black bg-transparent border-grey-300 border hover:border-black rounded-lg text-md text-center inline-flex items-center focus-visible-default outline-offset-2"
          type="submit"
        >
          <svg>
            apple-logo.svg
          </svg>
          <span
            data-testid="ftlmsg-mock"
            id="continue-with-apple-button"
          >
            <p
              class="pe-4"
            >
              Continue with Apple
            </p>
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;
